# awareness

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_STATUS.md  LESSONS.md  Makefile  PLAN.md  PLAN_hierarchical_attention.md  QUICKSTART.md  QWEN3_IMPLEMENTATION.md  README.md  RESOURCES.md  SETUP.md  STRUCTURE.md  pyproject.toml  walkthrough.md
configs/: accelerate_quantized.yaml
docs/: ACCELERATE_INTEGRATION.md
scripts/: crawl_repos.py  delete_large_repos.py  eval.py  process_repos.py  train.py  train_proto1.py
src/awareness/: __init__.py  config.py  memory.py
src/awareness/data/: __init__.py  cli.py
src/awareness/data/crawler/: __init__.py  config.py  database.py  discovery.py  downloader.py  orchestrator.py  rate_limiter.py
src/awareness/data/processor/: __init__.py  commit_extractor.py  config.py  dataset.py  filters.py  transformer.py
src/awareness/data/synthetic/: __init__.py  lookup_table.py  needle_haystack.py
src/awareness/models/: __init__.py  awareness_decoder.py  base.py  decoder.py  encoder.py  inference.py  pipeline_controller.py  pipeline_schedule.py  staged_head.py
src/awareness/training/: __init__.py  trainer.py
tests/: __init__.py  test_config.py  test_gca.py  test_memory.py  test_pipeline.py  test_quantized_training.py
