[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awareness"
version = "0.0.1"
description = "LLMs with Awareness: Decoupled Contextual Memory for Repository-Scale Reasoning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

data = [
    "httpx>=0.27",
    "aiofiles>=24.0",
    "aiosqlite>=0.20",
    "tqdm>=4.66",
    "tenacity>=8.2",
    "python-dotenv>=1.0",
]

[project.scripts]
awareness-data = "awareness.data.cli:main"
awareness-crawl = "awareness.data.cli:main"  # Alias for compatibility

[tool.hatch.build.targets.wheel]
packages = ["src/awareness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
